添加demo，修改onTouch事件拦截的错误

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">ElasticityView</string>
+    <string name="text_long">人生需要一个总开关\n
+        价值观是掌控一个人生命历程的开关。在当下，我们拥有一个共同的价值观体系——社会主义核心价值观。它有十二种高尚的价值理念，其中的核心理念无疑是“爱国”。
+\n
+生活在一个历史悠久的国度，爱国是我们的本能。在河北涿鹿县的千年文化神道上，五十六根民族图腾柱鳞次栉比，拱卫着中华合符坛的中枢；九条腾空的巨龙怀抱旭日，神采飞扬。越过“港土归根碑”和“澳土归根碑”，我们思接千载，屏气凝神感受着“赫赫始祖，吾华肇造。胄衍祀绵，岳峨河浩”气吞山河的文气。俯察涿鹿的原野，一道道大山梁、一截截古城墙、一片片绿屏障，以及流淌数千年的桑干河，无不散发出煌煌中华文明的气息。五千年厚重的历史文化可以说是我们民族的根。我们要承继先祖们创下的恢弘基业，让中华文化的根源得以枝繁叶茂。我们还要用自己的独创精神，用历史文化的精髓滋养当下的社会主义核心价值观。
+\n
+沐浴在现代化建设事业辉煌成就的阳光下，爱国是我们的同感。行驶在快车道上的中国经济，实现了对一个个经济大国的超越，我们实现民族复兴的伟大梦想已不再遥远。和平、民主、文明的社会环境，数千万套保障房开工建设，覆盖13亿人的社保和中等收入群体的快速扩展等因素，让我们的幸福感陡增。随着社会改革的不断深入，大量存款和高存款率两大因素的存在，让中国发生经济危机的可能性极低。飞驰在欧洲大陆上的中国高铁列车、打破多哈回合谈判十多年僵局的贡献，中国发出的每一个声音都有着十足的分量。
+\n
+每一个人都有自己独特的爱国方式。在那个磐梦沉沉的抗争年代，中华儿女擎起肱膂，辅社稷于将倾。北京密云县妇女邓玉芬毫不犹豫地把丈夫和五个孩子送上前线，悲痛于他们全部为国捐躯，她也感到满门忠烈的自豪。在祖国南疆的三沙首府永兴岛上，勤劳的驻岛军民克服了台风频发、毒辣烈日、晕船反胃等非亲历者无法想象的困难，让那里居民小区、食堂超市、休闲广场、银行医院一应俱全。联想到生命从此镌刻上“三沙”这两个光荣的大字，每个人的心中都热血沸腾。我国首位女航天员刘洋有句经典语言：“被祖国需要是一种幸福”。在中国航天科技集团，青年员工的比率超过一半，载人飞船研制队伍的平均年龄是33岁，东方红四号卫星平台研制人员平均更是只有29岁。拥有这么多天才的青年，航天大国梦已经在实现。
+\n
+一个国家的振兴并不根源于殷实的国库、坚固的城防亦或是华丽的住房，而是根源于这个国家的公民是否爱国、是否勤勉。我们对生于斯、长于斯的热土是无限依赖的，爱国正是基于这种依赖关系的深厚情感，也是每一个公民自觉的行为准则。身为中华儿女，我们时时以振兴中华为己任，通过自己特有的方式报效祖国。
+\n
+工业社会分工细化，发展迅猛进而跨界混搭，技术更新快得让人空叹力有不逮。有人感叹：“我们经过数年的磨练，好不容易成了轮机师，毕业后，竟然发现轮船已经陈列在博物馆里了。”除了技术更新快速以外，就是价值观呈现多元化趋势，迷雾重重的社会环境让许多人无所适从。越是多元化的社会，就越要高擎核心价值观的火炬前行。爱国精神正是现代化建设期的中国社会不可流失的思想钙质。
+\n
+时序不居，光阴如流，教师节忽焉已至。三十年韶华易逝，多少人类灵魂的工程师在三十个教师节的历史间隙中容颜老去，他们用心血浇灌的植株已经成长为参天栋梁。今年教师节的主题是：带头践行社会主义核心价值观。“善歌者使人继其声，善教者使人继其志。”身为教师，我们就是要通过国民的爱国教育，把核心价值观渗透到人们日常生活之中，融入到社会发展的每一个角落。伫立在新的起点上，我们要坚决以核心价值观作为教学行为的准绳，更好地承担起启迪智慧、塑造灵魂的育人职责。
+\n
+每一个人的人生道路是自由选择的，但只有在正确价值观指导下的人生才是健康的人生。爱国精神作为正确价值观的最高点，时刻以它的光芒照耀着迷雾重重的人生路，成为掌控人生成功之旅的总开关。
+\n
+作者：子涵1\n
+链接：https://www.jianshu.com/p/bded2b2114d1\n
+來源：简书\n
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。\n</string>
 </resources>
